# prAIce

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  scheduler.Dockerfile
.dvc/: config
inference_api/: Dockerfile  requirements.txt
inference_api/app/: main.py  models.py  schema.py  utils.py
inference_api/app/libs/: sentiment.py  similarity.py  summarizer.py
notebooks/: .gitignore  01.1__Test_tickers_module_and_Flaml_base_modeling__MSFT.py  01.2__Flaml_base_modeling__AAPL.py  01.3__Flaml_base_modeling__AMZN.py  01.4__TPOT_base_modeling__AAPL.py  01.5__TPOT_base_modeling__MSFT.py  01.6__MLJAR_base_modeling__AAPL.py  01.7__.py
notebooks/catboost_1662191442.0378382/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_1662191442.0378382/learn/: events.out.tfevents
notebooks/catboost_1662191442.0378382/test/: events.out.tfevents
prAIce/configs/instruments/: default_instrument_config.yaml
prAIce/configs/ml_models/: default.yaml
prAIce/data/: .gitignore
prAIce/data/auxiliary/: yahoo_tickers_2017.xlsx.dvc
prAIce/libs/: ml.py  paths.py  tickers.py  train.py
praice/: __init__.py  celery.Dockerfile  celery_config.py  cli.py  config.py  constants.py  ml.py  paths.py  requirements.txt  scheduler.py  tasks.py  tickers.py  train.py  utils.py
praice/configs/instruments/: default_instrument_config.yaml
praice/configs/learners/: default_ml_config.yaml
praice/configs/ml_models/: default_ml_config.yaml
praice/configs/ta_indicators/: all_default.yaml  ema1.yaml
praice/data_handling/: crud.py  migrations.py  models.py
praice/data_handling/collectors/: fundamental_collector.py  news_collector.py  price_collector.py
praice/data_handling/db_ops/: crud.py  historical_price_helpers.py  news_helpers.py  scraping_url_helpers.py  (+2 more)
praice/libs/: summarizers.py
praice/utils/: helpers.py  logging.py
requirements/: dev.txt
tests/: conftest.py  test_tickers.py
tests/utils/: test_helpers.py
(+11 files in other folders)
