[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "praice"
version = "0.1.3"
authors = [
  { name="M. Reza Zerehpoosh", email="ironcladgeek@hotmail.com" },
]
description = "A framework for forecasting stock prices with emphasis on Machine Learning best practices."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.22.0",
    "pandas==1.3.5",
    "matplotlib==3.5.1",
    "click==8.0.3",
    "python-dotenv==0.19.2",
    "requests==2.28.1",
    "PyYAML==5.4.1",
    "yfinance==0.1.74",
    "html5lib==1.1",
    "pyarrow==6.0.1",
    "mlflow==1.28.0",
    "scikit-learn==1.0.1",
    "lightgbm==3.3.2",
    "xgboost==1.4.2",
    "catboost==1.0.6",
    "FLAML==1.0.10",
    "prophet==1.1",
    "TPOT==0.11.7",
    "TA-Lib==0.4.24",
    "hcrystalball==0.1.12",
    "statsmodels==0.13.2",
    "mljar-supervised==0.11.3",
]

[project.urls]
"Homepage" = "https://github.com/ironcladgeek/prAIce"
"Bug Tracker" = "https://github.com/ironcladgeek/prAIce/issues"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
 \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
